<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">101 Years</string>
    <string name="title_exerciseitem_detail">ExerciseItem Detail</string>
    <string name="app_firstname">101</string>
    <string name="app_secondname">Years</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="reenter_password">RE-ENTER PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New User?</string>
    <string name="exsisting_user">Exsisting User?</string>
    <string name="send_mail">SEND MAIL</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="view_as">View As</string>
    <string name="list">List</string>
    <string name="tiles">Tiles</string>
    <string name="classic">Classic</string>
    <string name="follow_us">Contact Us</string>
    <string name="about">About</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_date">Set Age</string>
    <string name="change_password">Change Password</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="save_changes">Save Changes</string>
    <string name="na">NA</string>
    <string name="update_profile">Update Profile</string>
    <string name="cancel">Cancel</string>
    <string name="upgrade">Upgrade</string>
    <string name="my_courses">My Courses</string>
    <string name="statistics">Statistics</string>
    <string name="born_on">Born on</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="new_re_password">RE-ENTER NEW PASSWORD</string>
    <string name="show_me">View by</string>
    <string name="overall_performance">Overall Performance</string>
    <string name="start">START</string>
    <string name="save_value">SAVE VALUE</string>
    <string name="view_demo">View Demo</string>
    <string name="description">Description</string>
    <string name="start_session">Start Session</string>
    <string name="close">Close</string>
    <string name="no_data">No Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_answer">Your Answer</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="you_answered">You answered</string>
    <string name="please_select">Please select if you are suffering from</string>
    <string name="you_are_suffering_from">You are suffering from</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="pause_session">Pause Session</string>
    <string name="end_session">End Session</string>
    <string name="resume_session">Resume Session</string>
    <string name="session_paused">Session Paused.</string>
    <string name="session_active">Session Active.</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="zero">00</string>
    <string name="clock_center">:</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="session_summary">Session Summary</string>
    <string name="share">Share</string>
    
    <string name="about_details">\"Things that really matter in life seldom announces it\'s value. One such vital aspect of our existence is our breath\". 101 Years Inc., is purely focused on breathing technique to make all of us live healthy and longer. Founded by a doctor and engineer.</string>
    <string name="calibrate_header_text">Calibrate sensor for</string>
    <string name="upgrade_details">Upgrade your subscription to get access to new exercises to achieve those 101 Years.</string>
    <string name="questionnaire_detials">We would like you to answer a couple of questions to understand and help you achieve your 101 Years.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</string>
    
    <string name="msg_start_session_init">Press Start Session to begin.</string>
    <string name="msg_waiting_for_input">Waiting for user input.</string>
    <string name="msg_calibrating">Calibrating. Press SAVE VALUE to make the current value as your new preset.</string>
    <string name="msg_changes_saved">Profile updated successfully.</string>
    <string name="msg_registration_failed">Registration failed. Please try again.</string>
    <string name="msg_registration_empty_field">Please fill up all the fields.</string>
    <string name="msg_registration_password_mismatch">Password and Re-Enter Password fields donot match.</string>
    <string name="msg_login_empty_fields">Please you username and password.</string>
    <string name="msg_login_wrong_credential">The entered username or password donot match our records.</string>
    <string name="msg_login_failed">Authentication failed.</string>
    <string name="msg_sensor_error">An error occurred while accessing your device micro-phone.</string>
    <string name="msg_swipe_ltr">Hold the corner of your screen and swipe left to access the menu.</string>
    <string name="msg_swipe_btn">You can also press the button on the top left corner to toggle menu.</string>
    <string name="msg_questionnaire_answer">Please enter your answer.</string>
    <string name="msg_select_questionnaire_items">Please select before proceeding.</string>
    <string name="msg_enter_comment">Please enter your comment.</string>
    <string name="msg_your_score">Your session score.</string>
    <string name="feature_na">Feature not available.</string>
    
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    
    <string-array name="statictics_filter">
        <item>Week</item>
        <item>Month</item>
        <item>Overall</item>
    </string-array>
    
    <string-array name="calibrate_type">
        <item>INHALE</item>
        <item>EXHALE</item>
    </string-array>
</resources>