<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/holder"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_first_name"
                style="@style/LoginEditTextStyle"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_last_name"
                style="@style/LoginEditTextStyle"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_username"
                style="@style/LoginEditTextStyle"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_email"
                style="@style/LoginEditTextStyle"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_password"
                style="@style/LoginEditTextStyle"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/sign_up_re_enter_password"
                style="@style/LoginEditTextStyle"
                android:hint="@string/reenter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_up_procced_btn"
                style="@style/PositiveButtonStyle"
                android:text="@string/sign_up" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/layout_signup_footer" />

</LinearLayout>