<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/update_profile_footer" 
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/slider_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/profile_first_name_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/first_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_last_name_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_email_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

            <RadioGroup
                android:id="@+id/profile_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/profile_gender_male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/male"
                    android:textColor="@color/app_dark_gray" />

                <RadioButton
                    android:id="@+id/profile_gender_female_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/female"
                    android:textColor="@color/app_dark_gray" />
            </RadioGroup>

            <TextView
                android:id="@+id/profile_change_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_age"
                android:fontFamily="sans-serif-light"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/set_date"
                android:textColor="@color/app_dark_gray"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/update_profile_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/profile_save_profile_changes"
            style="@style/PositiveButtonStyle"
            android:layout_weight="1"
            android:text="@string/save_changes" />

        <Button
            android:id="@+id/profile_discard_profile_changes"
            style="@style/NegativeButtonStyle"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>