<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/profile_first_name_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/first_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/profile_last_name_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/profile_email_edit"
                style="@style/LoginEditTextStyle"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

            <RadioGroup
                android:id="@+id/profile_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/profile_gender_male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/male"
                    android:textColor="@color/app_dark_gray" />

                <RadioButton
                    android:id="@+id/profile_gender_female_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/female"
                    android:textColor="@color/app_dark_gray" />
            </RadioGroup>

            <com.example.healthcareapp.widgets.LightTextView
                android:id="@+id/profile_change_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_age"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/set_date"
                android:textColor="@color/app_dark_gray"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/profile_questionnaire_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/slider_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <com.example.healthcareapp.widgets.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/questionnaire_detials"
                    android:textColor="@color/app_light_gray"
                    android:textSize="16sp" />

                <com.example.healthcareapp.widgets.LightTextView
                    android:id="@+id/profile_questionnaire"
                    style="@style/ClickableTextButtonStyle"
                    android:text="@string/questionnaire"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_update_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/slider_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <com.example.healthcareapp.widgets.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/upgrade_details"
                    android:textColor="@color/pink_dark"
                    android:textSize="16sp" />

                <com.example.healthcareapp.widgets.LightTextView
                    android:id="@+id/profile_upgrade_profile"
                    style="@style/ClickableTextButtonStyle"
                    android:text="@string/upgrade"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/profile_save_profile_changes"
        style="@style/PositiveButtonStyle"
        android:text="@string/save_changes" />

</LinearLayout>