<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/change_password_old"
                style="@style/LoginEditTextStyle"
                android:hint="@string/current_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/change_password_new"
                style="@style/LoginEditTextStyle"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/change_password_re_new"
                style="@style/LoginEditTextStyle"
                android:hint="@string/new_re_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/change_password_save"
        style="@style/PositiveButtonStyle"
        android:text="@string/save_changes" />

</LinearLayout>