<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/slider_bg"
    android:orientation="vertical" >

    <com.example.healthcareapp.widgets.BoldTextView
        android:id="@+id/adapter_questionnaire_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/app_light_gray"
        android:textSize="16sp" />

    <ViewFlipper
        android:id="@+id/adapter_questionnaire_list_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.healthcareapp.widgets.LightEditText
                android:id="@+id/adapter_questionnaire_answer"
                style="@style/LoginEditTextStyle"
                android:hint="@string/your_answer"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.example.healthcareapp.widgets.LightTextView
                    android:id="@+id/adapter_questionnaire_positive_btn"
                    style="@style/ClickablePositiveTextButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textSize="18sp" />

                <com.example.healthcareapp.widgets.LightTextView
                    android:id="@+id/adapter_questionnaire_negative_btn"
                    style="@style/ClickableNegativeTextButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <com.example.healthcareapp.widgets.LightTextView
            android:id="@+id/adapter_questionnaire_answer_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/darker_gray"
            android:textIsSelectable="false"
            android:textSize="16sp" />
    </ViewFlipper>

</LinearLayout>