<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sliding_menu_bg" >

    <LinearLayout
        android:id="@+id/sliding_main_menu_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/slider_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="96dp"
            android:layout_height="96dp" >

            <com.example.healthcareapp.widgets.RadialProgressView
                android:id="@+id/sliding_menu_main_menu_progress_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/sliding_menu_main_menu_user_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/na"
                    android:textColor="@color/pink_dark"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/app_secondname"
                    android:textColor="@color/app_dark_gray"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" 
            android:layout_margin="3dp">

            <TextView
                android:id="@+id/sliding_menu_main_menu_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textColor="@color/app_dark_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sliding_menu_main_menu_user_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/na"
                android:textColor="@color/pink_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sliding_menu_main_menu_edit_profile"
                style="@style/ClickableTextButtonStyle"
                android:text="@string/update_profile"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/sliding_menu_main_menu_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sliding_main_menu_header_layout" />

</RelativeLayout>